# Predictive-Modeling

./: .gitignore  README.md  dvc.yaml  eda.yaml  init_project.sh  makefile  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: data.yaml  dvc_remote.yaml  hypotheses.yaml
data/processed/: .gitignore  insurance_cleaned.csv.dvc
docs/: README_project_overview.md  dvc.md  eda_methodology.md  hypothesis_testing.md
notebooks/analysis/: hypothesis_tests.ipynb  model_building.ipynb
notebooks/exploration/: eda.ipynb
reports/: eda_report.md
scripts/: eda_report_generator.py  run_eda_pipeline.py
src/insurance_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/insurance_analytics/core/: config.py  logger.py  registry.py
src/insurance_analytics/eda/: exploration.py  stat.py
src/insurance_analytics/hypothesis/: balance_checks.py  interpert.py  metrics.py  pipeline.py  segmentation.py  statistical_tests.py
src/insurance_analytics/models/: data_split.py  interpretability.py  model_train.py
src/insurance_analytics/preprocessing/: cleaner.py  eda_prep.py  feature_engineering.py
src/insurance_analytics/utils/: io_utils.py  metrics.py  project_root.py  system.py  validation.py
src/insurance_analytics/viz/: ab_plots.py  plots.py
tests/unit/: test_registy.py
