[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance_analytics"
version = "0.1.0"
description = "Insurance Risk Analytics: End-to-end data analysis, modeling, and reporting."
authors = [
    { name = "Tibebu K.", email = "wise.tibec@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["insurance", "analytics", "machine-learning", "risk"]
classifiers = [
    "Programming Language :: Python :: 3.13.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/<username>/insurance-analytics"
"Documentation" = "https://github.com/<username>/insurance-analytics/docs"
"Source" = "https://github.com/<username>/insurance-analytics"

[tool.setuptools.packages.find]
where = ["src"]
include = ["insurance_analytics*"]

[project.optional-dependencies]
dev = [
    "unittest",
    "black",
    "flake8",
    "isort",
    "mypy",
    "jupyter,
    "ipython",
]

[tool.setuptools.scripts]
insurance-analytics = "insurance_analytics.main:main"
