[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance_analytics"
version = "0.1.0"
description = "Insurance Risk Analytics: End-to-end data analysis, modeling, and reporting."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }

authors = [
    { name = "Tibebu K.", email = "wise.tibec@gmail.com" }
]

keywords = [
    "insurance",
    "analytics",
    "machine-learning",
    "risk",
    "predictive-modeling"
]

classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "python-dateutil",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "reportlab",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pre-commit",
    "mypy",
    "codecov",
     "doit"

]

fast = [
    "rapidfuzz"
]

[project.urls]
Homepage = "https://github.com/tib-dev/preditctive-modeling"
Documentation = "https://github.com/tib-dev/preditctive-modeling/docs"
Source = "https://github.com/tib-dev/preditctive-modeling"

# ---------------------------------------------------
# Setuptools package discovery
# ---------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["insurance_analytics*"]

# ---------------------------------------------------
# Black formatter
# Black doesn’t yet support 3.13 target-version, so we use py312
# ---------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py312"]

# ---------------------------------------------------
# isort (keeps imports clean)
# ---------------------------------------------------
[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

# ---------------------------------------------------
# mypy type checking
# ---------------------------------------------------
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
no_implicit_optional = true

# ---------------------------------------------------
# pytest configuration
# ---------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"
